// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExploreFeed renders correctly without any results 1`] = `
<div
  className="feedWrapper"
>
  <div
    className="feedItem ui segment"
    key="_uTRAwAAQBAJ"
  >
    <div
      className="content"
    >
      <div
        className="ui tiny left floated image"
      >
        <img
          alt=""
          src="http://books.google.com/books/content?id=9gUJAQAAMAAJ&printsec=frontcover&img=1&zoom=5&source=gbs_api"
        />
      </div>
      <div
        className="header"
      >
        Practical Modern JavaScript
      </div>
      <div
        className="meta"
      >
        1995-12-01
      </div>
      <div
        className="description"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Many webmasters don't have time to learn a high level programming language, ",
          }
        }
      />
    </div>
  </div>
  <div
    className="feedItem ui segment"
    key="vmE4nBg4mpc"
  >
    <div
      className="content"
    >
      <div
        className="ui tiny left floated image"
      >
        <img
          alt=""
          src="http://image.com"
        />
      </div>
      <div
        className="header"
      >
        Functional JavaScript
      </div>
      <div
        className="meta"
      >
        2009-12-01
      </div>
      <div
        className="description"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Lorem ipsum",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`ExploreFeed renders correctly without results 1`] = `
<div
  className="feedWrapper"
>
  <div
    className="feedItem ui segment"
    key="_uTRAwAAQBAJ"
  >
    <Link
      replace={false}
      to={
        Object {
          "pathname": "/explore/_uTRAwAAQBAJ",
          "state": Object {
            "id": "_uTRAwAAQBAJ",
            "searchInfo": Object {
              "textSnippet": "Many webmasters don't have time to learn a high level programming language, ",
            },
            "volumeInfo": Object {
              "imageLinks": Object {
                "smallThumbnail": "http://books.google.com/books/content?id=9gUJAQAAMAAJ&printsec=frontcover&img=1&zoom=5&source=gbs_api",
              },
              "publishedDate": "1995-12-01",
              "title": "Practical Modern JavaScript",
            },
          },
        }
      }
    >
      <div
        className="content"
      >
        <div
          className="ui tiny left floated image"
        >
          <img
            alt=""
            src="http://books.google.com/books/content?id=9gUJAQAAMAAJ&printsec=frontcover&img=1&zoom=5&source=gbs_api"
          />
        </div>
        <div
          className="header"
        >
          Practical Modern JavaScript
        </div>
        <div
          className="meta"
        >
          1995-12-01
        </div>
        <div
          className="description"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Many webmasters don't have time to learn a high level programming language, ",
            }
          }
        />
      </div>
    </Link>
  </div>
  <div
    className="feedItem ui segment"
    key="vmE4nBg4mpc"
  >
    <Link
      replace={false}
      to={
        Object {
          "pathname": "/explore/vmE4nBg4mpc",
          "state": Object {
            "id": "vmE4nBg4mpc",
            "searchInfo": Object {
              "textSnippet": "Lorem ipsum",
            },
            "volumeInfo": Object {
              "imageLinks": Object {
                "smallThumbnail": "http://image.com",
              },
              "publishedDate": "2009-12-01",
              "title": "Functional JavaScript",
            },
          },
        }
      }
    >
      <div
        className="content"
      >
        <div
          className="ui tiny left floated image"
        >
          <img
            alt=""
            src="http://image.com"
          />
        </div>
        <div
          className="header"
        >
          Functional JavaScript
        </div>
        <div
          className="meta"
        >
          2009-12-01
        </div>
        <div
          className="description"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Lorem ipsum",
            }
          }
        />
      </div>
    </Link>
  </div>
</div>
`;
